--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav ul li a
 .first
 {
     background-color: black;
-    background-image: url(./tribute1.jpg) ;
+    background-image: url(Images/tribute1.jpg) ;
     background-size:contain;
     background-repeat: no-repeat;
     background-position: right;
